<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goldrushcomputing.RunningApp068.MainActivity">

    <!-- GoogleMapを表示させるためにMapViewというViewをレイアウトに埋め込み -->


    <!--

    <LinearLayout
        android:id="@+id/debug_panel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:background="#99000000"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="accrcy:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/sigcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="sigCnt:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/noisecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="noiseCnt:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="logCnt:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/nsratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="nsRatio:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/latest_nsratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="nsRatio#:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="Rule:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/logtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="logTime"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/system_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="sysTime:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="startTime:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/paused_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="paused for:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pred_delta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:includeFontPadding="true"
            android:text="predDelta:"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="548dp"
            android:layout_gravity="bottom" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="66dp">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:text="0:00"
                android:textSize="30sp"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="30dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/disText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/time"
                android:textSize="30sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/timer"
                tools:layout_editor_absoluteY="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:id="@+id/Linear"
                android:layout_width="183dp"
                android:layout_height="65dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="-1dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/LatiText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Lati"
                    android:textSize="12sp"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/timer"
                    tools:layout_editor_absoluteY="30dp" />

                <TextView
                    android:id="@+id/LongText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Long"
                    android:textSize="12sp"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/timer"
                    tools:layout_editor_absoluteY="51dp" />

                <TextView
                    android:id="@+id/AltiText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Alti"
                    android:textSize="12sp"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/timer"
                    tools:layout_editor_absoluteY="73dp" />

                <TextView
                    android:id="@+id/SpedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/Sped"
                    android:textSize="12sp"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/timer"
                    tools:layout_editor_absoluteY="73dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"

        >

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/run_stop_button" />


        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/run_start_button" />


    </FrameLayout>

</FrameLayout>
